--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
 Consultant and freelance developer of computer vision and 3D manipulation algorithms.<BR/>
 Experienced algorithm engineer with background in high-performance computing, image processing, generative modelling and code-generators.<BR/>
 Uses mostly C++, Matlab, Python, Javascript, CUDA, OpenCV, Deep Learning, Tensorflow, three.js.<BR/>
+Based in Tel-Aviv, Israel.<BR/>
 						<nav>
 							<ul>
-								<li><a href="#" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-								<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+								<li><a href="linkedin.com/in/eran-geva-a477769" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+								<li><a href="https://www.facebook.com/eran.geva" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="https://github.com/erasta" class="icon fa-github"><span class="label">Github</span></a></li>
+								<li><a href="mailto:eran.geva@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 					</header>
