--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Uses mostly C++, Matlab, Python, Javascript, CUDA, OpenCV, Deep Learning, Tensor
 Based in Tel-Aviv, Israel.<BR/>
 						<nav>
 							<ul>
-								<li><a href="linkedin.com/in/eran-geva-a477769" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+								<li><a href="https://linkedin.com/in/eran-geva-a477769" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 								<li><a href="https://www.facebook.com/eran.geva" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="https://github.com/erasta" class="icon fa-github"><span class="label">Github</span></a></li>
 								<li><a href="mailto:eran.geva@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
