--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 Consultant and freelance developer of computer vision and 3D manipulation algorithms.<BR/>
 Experienced algorithm engineer with background in high-performance computing, image processing, generative modelling and code-generators.<BR/>
 Uses mostly C++, Matlab, Python, Javascript, CUDA, OpenCV, Deep Learning, Tensorflow, three.js.<BR/>
-Based in Tel-Aviv, Israel.<BR/>
+Based in Tel-Aviv, Israel.
 						<nav>
 							<ul>
 								<li><a href="https://linkedin.com/in/eran-geva-a477769" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
@@ -36,6 +36,7 @@ Based in Tel-Aviv, Israel.<BR/>
 								<li><a href="mailto:eran.geva@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
+eran.geva@gmail.com
 					</header>
 
 				<!-- Footer -->
