--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<h1>Eran Geva</h1>
 						<p>&nbsp;&bull;&nbsp; Algorithm Specialist &nbsp;&bull;&nbsp;</p>
 Consultant and freelance developer of computer vision and 3D manipulation algorithms.<BR/>
-Experienced algorithm engineer with background in high-performance computing, image processing, generative modelling and code-generators.<BR/>
+Background in high-performance computing, image processing, generative modelling and code-generators.<BR/>
 Uses mostly C++, Matlab, Python, Javascript, CUDA, OpenCV, Deep Learning, Tensorflow, three.js.<BR/>
 Based in Tel-Aviv, Israel.
 						<nav>
