--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 						<p>&nbsp;&bull;&nbsp; Algorithm Specialist &nbsp;&bull;&nbsp;</p>
 Consultant and freelance developer of computer vision and 3D manipulation algorithms.<BR/>
 Background in high-performance computing, image processing, generative modelling and code-generators.<BR/>
-Uses mostly C++, Matlab, Python, Javascript, CUDA, OpenCV, Deep Learning, Tensorflow, three.js.<BR/>
-Based in Tel-Aviv, Israel.
+Uses mostly C++, Matlab, Python, Javascript, CUDA, OpenCV, Deep Learning, Tensorflow, three.js, Unity, Unreal.<BR/>
+Based in Berlin, Germany.
 						<nav>
 							<ul>
 								<li><a href="https://linkedin.com/in/eran-geva-a477769" class="icon fa-linkedin" target="_blank"><span class="label">Linkedin</span></a></li>
