--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 Consultant and freelance developer of computer vision and 3D manipulation algorithms.<BR/>
 Background in high-performance computing, image processing, generative modelling and code-generators.<BR/>
 Uses mostly C++, Matlab, Python, Javascript, CUDA, OpenCV, Deep Learning, Tensorflow, three.js, Unity, Unreal.<BR/>
-Based in Berlin, Germany.
+Based in Israel.
 						<nav>
 							<ul>
 								<li><a href="https://linkedin.com/in/eran-geva-a477769" class="icon fa-linkedin" target="_blank"><span class="label">Linkedin</span></a></li>
